Fix: alignment of buttons on home page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -252,9 +252,3 @@ a:hover{
         height: auto;
     }
 }
-
-@media (min-width: 768px) {
-    .hero-buttons-align {
-        bottom: 25%
-    }
-}
